{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "OnFoot",
            "id": "289d9aab-3a1e-4da9-93db-c9f698a748a9",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "5bfa9b70-93ae-4cb1-a164-ba6fedb635cd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "638a42ac-a219-4c7f-9212-79c496ca1e28",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ada22589-4137-4ff1-994c-2b6218b97098",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1d28a8eb-1983-4a37-af35-65ae960fcf5b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1dc2dc1e-3a6c-406c-a770-0f94514ffbe6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "402d5700-f2fe-4d28-9f52-58fe9a9217cb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}